# gabriel-dib-adobe-fde-the

./: .gitignore  ARCHITECTURE.mmd  EXECUTION_FLOW.md  README.md  pyproject.toml
config/: brand_policy.yaml  legal_policy.yaml
examples/: adobe-client-campaign.yaml  template_brief.json  template_brief.yaml
output/adobe-client-campaign/: manifest.json  metrics.json
output/adobe-client-campaign_mock_run/: manifest.json  metrics.json
schemas/: brand_policy.schema.json  brief.schema.json  legal_policy.schema.json
src/creative_automation_cli/: brief_loader.py  cli.py  exceptions.py  pipeline.py
src/creative_automation_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/creative_automation_cli/assets/: __init__.py  generator.py  resolver.py
src/creative_automation_cli/compliance/: __init__.py  brand.py  legal.py  legal_policy.py  policy.py
src/creative_automation_cli/imaging/: __init__.py  logo_overlay.py  text_overlay.py  variants.py
src/creative_automation_cli/localization/: __init__.py  translator.py
src/creative_automation_cli/models/: __init__.py  brief.py  schema_export.py
tests/: test_asset_resolution.py  test_brand_policy.py  test_brief_validation.py  test_cli_env_loading.py  test_generated_image_storage_modes.py  test_legal_policy.py  test_manifest_metrics.py  test_pipeline_brand_strict.py  test_pipeline_dry_run.py  test_pipeline_legal_strict.py  test_pipeline_legal_validation_only.py  test_pipeline_localization.py  test_prompt_builder.py  test_reused_transparency_composite.py  test_s3_mirror.py
(+14 files in other folders)
